fix: remove Java error when handling URL